force-app/main/default/objects/Demo_Object_24_2_Release__c/Demo_Object_24_2_Release__c.object-meta.xml
<CustomObject>
    <label>Demo Object 24.2 Release</label>
    <nameField>
        <label>Demo Object 24.2 Release Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Releases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>