force-app/main/default/objects/Demo_Object_24_2_Release__c/fields/Additional__c.field-meta.xml
<CustomField>
    <fullName>Additional__c</fullName>
    <label>Additional</label>
    <length>80</length>
    <type>Text</type>
</CustomField>