force-app/main/default/objects/Demo_Object_24_2_Release__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <label>Name</label>
    <length>70</length>
    <type>Text</type>
</CustomField>