force-app/main/default/objects/Demo_Object_24_2_Release__c/fields/Valid_Date__c.field-meta.xml
<CustomField>
    <fullName>Valid_Date__c</fullName>
    <label>Validity</label>
    <type>Date</type>
</CustomField>